[Main] Fixed videos being too large

--- a/css/style.scss
+++ b/css/style.scss
@@ -335,6 +335,7 @@ tr {
 .fit-image {
     display: block;
     margin-inline: auto;
+    max-width: 100%;
 }
 
 .box {
